# keyboard-optimization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config
src/: api.cu  carpalx.cu  common.cu  common.cuh  general.cuh  record.cu  record.cuh  rng.cu  rng.cuh  test.cu  test.cuh
src/genetic/: duplicates.cu  duplicates.cuh  genetic.cu  genetic.cuh  kernel.cu  kernel.cuh  perf.cu  perf.cuh  sort.cu  sort.cuh
src/lib/: choices.cuh  config.cu  config.cuh  constants.cuh  def.cuh  glob.cu  glob.cuh  md5.cu  md5.cuh  metric.cu  metric.cuh  text.cu  text.cuh
